docs/7.56/md/abenoperands_names.md
---
title: "Notations for Single Operands"
description: |
  A single operand, that is, an operand that is not an expression, can either be elementary or be a combination of components. Composite operands are: -   Structured data types or data objects (structure) -   Instances of classes (objects) -   Classes -   Interfaces As a consequence, names for operand
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenoperands_names.htm"
abapFile: "abenoperands_names.htm"
keywords: ["select", "do", "if", "try", "class", "data", "types", "abenoperands", "names"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) →  [Operands](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenoperands.htm) →  [Data Objects in Operand Positions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenoperands_data_objects.htm) → 

Notations for Single Operands

A single operand, that is, an operand that is not an expression, can either be elementary or be a combination of components. Composite operands are:

-   Structured data types or data objects (structure)
-   Instances of classes (objects)
-   Classes
-   Interfaces

As a consequence, names for operands are either elementary names or names constructed from multiple names separated by component selectors. An elementary name is used for addressing the following:

-   Elementary operands
-   Components that are unique in the current context
-   Superunits made up of components

[Naming conventions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennaming_conventions.htm) apply to the elementary names. Composite names with component selectors are used for addressing individual components. A component can itself be a superunit of further components. Subcomponents can be addressed by [chaining](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenchaining_glosry.htm "Glossary Entry") multiple names.

-   [Structure Component Selector](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenstructure_component_selector.htm)
-   [Object Component Selector](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenobject_component_selector.htm)
-   [Class Component Selector](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenclass_component_selector.htm)
-   [Interface Component Selector](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeninterface_component_selector.htm)
-   [Dereferencing Operator](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abendereferencing_operator.htm)
-   [Chainings](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencomponent_chaining_selector.htm)
-   [Offset/Length Specifications for Substring Access](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenoffset_length.htm)

Hint

In addition to the component selectors listed here, [ABAP SQL](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_sql_glosry.htm "Glossary Entry") also has a [column selector](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abentable_comp_selector_glosry.htm "Glossary Entry") (~).

Continue
[Structure Component Selector](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenstructure_component_selector.htm)
[Object Component Selector](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenobject_component_selector.htm)
[Class Component Selector](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenclass_component_selector.htm)
[Interface Component Selector](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeninterface_component_selector.htm)
[Dereferencing Operator](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abendereferencing_operator.htm)
[Chainings](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencomponent_chaining_selector.htm)
[Offset/Length Specifications for Substring Access](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenoffset_length.htm)